--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -177,3 +177,15 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
     display: none;
 }
+
+// .is-invalid {
+//     border: 1px solid #dc2626 !important;
+// }
+
+input.ng-invalid.ng-touched {
+    border: 1px solid #dc2626 !important;
+}
+
+.input-border {
+    border: 1px solid var(--accentHover);
+}
