--- a/src/app/modules/admin/income/components/collect-dialog/collect-dialog.component.html
+++ b/src/app/modules/admin/income/components/collect-dialog/collect-dialog.component.html
@@ -1,172 +1,90 @@
 <div mat-dialog-title class="flex items-center gap-4">
     <h2 class="mb-2">Add Payment</h2>
 
-    <svg
-        fill="#000000"
-        class="fill-myAccent w-[48px] mb-2 cursor-pointer"
-        viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg"
-        (click)="addForm()"
-    >
+    <svg fill="#000000" class="fill-myAccent w-[48px] mb-2 cursor-pointer" viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg" (click)="addForm()">
         <path
-            d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Zm4-9H13V8a1,1,0,0,0-2,0v3H8a1,1,0,0,0,0,2h3v3a1,1,0,0,0,2,0V13h3a1,1,0,0,0,0-2Z"
-        />
+            d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Zm4-9H13V8a1,1,0,0,0-2,0v3H8a1,1,0,0,0,0,2h3v3a1,1,0,0,0,2,0V13h3a1,1,0,0,0,0-2Z" />
     </svg>
 </div>
 
 <section>
     <form (ngSubmit)="f.form.valid && addOrEditPayment()" #f="ngForm">
         <mat-dialog-content class="mat-typography mb-2">
-            <div
-                class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:flex items-center justify-between w-full gap-6 rounded bg-white shadow-md mt-2 mb-4 p-4"
-                *ngFor="let payment of paymentsModal; let i = index"
-            >
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:flex items-center justify-between w-full gap-6 rounded bg-white shadow-md mt-2 mb-4 p-4"
+                *ngFor="let payment of paymentsModal; let i = index">
                 <div class="flex flex-col gap-2 w-full">
-                    <label class="font-medium" for="amount"
-                        >Amount <span class="text-red-600">*</span></label
-                    >
-                    <input
-                        id="amount{{ i }}"
-                        type="number"
-                        required
-                        #amount="ngModel"
-                        name="amount{{ i }}"
-                        placeholder="Enter Amount"
-                        [ngStyle]="{
+                    <label for="account{{ i }}" class="">Account <span class="text-red-600">*</span></label>
+                    <mat-form-field class="w-full mt-0">
+                        <mat-select #account="ngModel" [disabled]="isEdit" required matInfix name="account{{ i }}"
+                            [(ngModel)]="payment.accountId" disableOptionCentering placeholder="Select Account"
+                            id="account{{ i }}">
+                            <mat-option *ngFor="let account of accounts" [value]="account.id">{{ account.accountName }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <div *ngIf="
+                            (f.submitted && account.invalid) || account.touched
+                        ">
+                        <div class="text-[#dc2626]" *ngIf="account.errors?.['required']">
+                            This field is required
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-col gap-2 w-full">
+                    <label for="payment-mode{{ i }}" class="">Payment Mode <span class="text-red-600">*</span></label>
+                    <mat-form-field class="w-full mt-0">
+                        <mat-select #payMode="ngModel" required [disabled]="isEdit" name="payment{{ i }}" matInfix
+                            disableOptionCentering [(ngModel)]="payment.paymentMode" placeholder="Select Payment Mode"
+                            id="payment{{ i }}">
+                            <mat-option *ngFor="let payment of paymentMode" [value]="payment.id">{{ payment.name }}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <div *ngIf="
+                            (f.submitted && payMode.invalid) || payMode.touched
+                        ">
+                        <div class="text-[#dc2626]" *ngIf="payMode.errors?.['required']">
+                            This field is required
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-col gap-2 w-full">
+                    <label class="font-medium" for="amount">Amount <span class="text-red-600">*</span></label>
+
+                    <input id="amount{{ i }}" type="number" required #amount="ngModel" name="amount{{ i }}"
+                        placeholder="Enter Amount" [ngStyle]="{
                             'border-color':
                                 f.submitted && amount.invalid ? '#dc2626' : ''
-                        }"
-                        [(ngModel)]="payment.amount"
-                        class="border input-border p-2 rounded"
-                    />
+                        }" [(ngModel)]="payment.amount" class="border input-border p-2 rounded" />
 
-                    <!-- <div
-                        *ngIf="
-                            amount.invalid && (amount.dirty || amount.touched)
-                        "
-                    >
-                        <span
-                            class="text-[#dc2626]"
-                            *ngIf="amount.errors?.['required']"
-                        >
-                            This field is required
-                        </span>
-                    </div> -->
-
-                    <div
-                        *ngIf="
+                    <div *ngIf="
                             (f.submitted && amount.invalid) || amount.touched
-                        "
-                    >
-                        <div
-                            class="text-[#dc2626]"
-                            *ngIf="amount.errors?.['required']"
-                        >
-                            This field is required
-                        </div>
-                    </div>
-                </div>
-
-                <div class="flex flex-col gap-2 w-full">
-                    <label for="payment-mode{{ i }}" class=""
-                        >Payment Mode <span class="text-red-600">*</span></label
-                    >
-                    <mat-form-field class="w-full mt-0">
-                        <mat-select
-                            #payMode="ngModel"
-                            required
-                            [disabled]="isEdit"
-                            name="payment{{ i }}"
-                            matInfix
-                            disableOptionCentering
-                            [(ngModel)]="payment.paymentMode"
-                            placeholder="Select Payment Mode"
-                            id="payment{{ i }}"
-                        >
-                            <mat-option
-                                *ngFor="let payment of paymentMode"
-                                [value]="payment.id"
-                                >{{ payment.name }}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-
-                    <div
-                        *ngIf="
-                            (f.submitted && payMode.invalid) || payMode.touched
-                        "
-                    >
-                        <div
-                            class="text-[#dc2626]"
-                            *ngIf="payMode.errors?.['required']"
-                        >
-                            This field is required
-                        </div>
-                    </div>
-                </div>
-
-                <div class="flex flex-col gap-2 w-full">
-                    <label for="account{{ i }}" class=""
-                        >Account <span class="text-red-600">*</span></label
-                    >
-                    <mat-form-field class="w-full mt-0">
-                        <mat-select
-                            #account="ngModel"
-                            [disabled]="isEdit"
-                            required
-                            matInfix
-                            name="account{{ i }}"
-                            [(ngModel)]="payment.accountId"
-                            disableOptionCentering
-                            placeholder="Select Account"
-                            id="account{{ i }}"
-                        >
-                            <mat-option
-                                *ngFor="let account of accounts"
-                                [value]="account.id"
-                                >{{ account.accountName }}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <div
-                        *ngIf="
-                            (f.submitted && account.invalid) || account.touched
-                        "
-                    >
-                        <div
-                            class="text-[#dc2626]"
-                            *ngIf="account.errors?.['required']"
-                        >
+                        ">
+                        <div class="text-[#dc2626]" *ngIf="amount.errors?.['required']">
                             This field is required
                         </div>
                     </div>
                 </div>
 
                 <div class="flex gap-4 items-center" *ngIf="!isEdit">
-                    <svg
-                        *ngIf="paymentsModal.length > 1"
-                        fill="#000000"
-                        version="1.1"
-                        id="Capa_1"
-                        xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink"
-                        viewBox="0 0 330 330"
-                        xml:space="preserve"
-                        class="fill-myAccent w-[40px] mt-6 cursor-pointer"
-                        (click)="removeForm(i)"
-                    >
+                    <svg *ngIf="paymentsModal.length > 1" fill="#000000" version="1.1" id="Capa_1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 330 330" xml:space="preserve" class="fill-myAccent w-[40px] mt-6 cursor-pointer"
+                        (click)="removeForm(i)">
                         <g>
-                            <path
-                                d="M281.633,48.328C250.469,17.163,209.034,0,164.961,0C120.888,0,79.453,17.163,48.289,48.328
+                            <path d="M281.633,48.328C250.469,17.163,209.034,0,164.961,0C120.888,0,79.453,17.163,48.289,48.328
 		c-64.333,64.334-64.333,169.011,0,233.345C79.453,312.837,120.888,330,164.962,330c44.073,0,85.507-17.163,116.671-48.328
 		c31.165-31.164,48.328-72.599,48.328-116.672S312.798,79.492,281.633,48.328z M260.42,260.46
 		C234.922,285.957,201.021,300,164.962,300c-36.06,0-69.961-14.043-95.46-39.54c-52.636-52.637-52.636-138.282,0-190.919
 		C95,44.042,128.901,30,164.961,30s69.961,14.042,95.459,39.54c25.498,25.499,39.541,59.4,39.541,95.46
-		S285.918,234.961,260.42,260.46z"
-                            />
+		S285.918,234.961,260.42,260.46z" />
                             <path
-                                d="M254.961,150H74.962c-8.284,0-15,6.716-15,15s6.716,15,15,15h179.999c8.284,0,15-6.716,15-15S263.245,150,254.961,150z"
-                            />
+                                d="M254.961,150H74.962c-8.284,0-15,6.716-15,15s6.716,15,15,15h179.999c8.284,0,15-6.716,15-15S263.245,150,254.961,150z" />
                         </g>
                     </svg>
                 </div>
@@ -176,15 +94,12 @@
         <mat-dialog-actions align="end" class="flex gap-4 items-center mt-4">
             <button
                 class="px-10 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2"
-                mat-dialog-close
-            >
+                mat-dialog-close>
                 Cancel
             </button>
             <button
                 class="px-10 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
-                cdkFocusInitial
-                type="submit"
-            >
+                cdkFocusInitial type="submit">
                 {{ isEdit ? "Update Income" : "Add Income" }}
             </button>
         </mat-dialog-actions>
